--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -36,7 +36,7 @@ body {
   color: var(--colorOffBlack);
   font-family: "Public Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    letter-spacing:-0.02em;
+  letter-spacing: -0.02em;
   -webkit-font-smoothing: unset;
   -moz-osx-font-smoothing: unset;
 }
@@ -149,4 +149,12 @@ body {
 
 .md-typeset .warning > .admonition-title::before {
   background-color: var(--colorWarning);
+}
+
+.md-nav--secondary {
+  background-color: transparent;
+}
+
+.md-nav--secondary .md-nav {
+  background-color: transparent;
 }
