Prevent user selection of prompt characters

--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -162,3 +162,7 @@ body {
 .md-header-nav__source .md-source__facts {
   display: none;
 }
+
+.highlight .gp, .highlight .go { /* Generic.Prompt, Generic.Output */
+  user-select: none;
+}
