Remove unnecessary padding on sidebar

--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -170,3 +170,7 @@ body {
 .highlight .gp, .highlight .go { /* Generic.Prompt, Generic.Output */
   user-select: none;
 }
+
+.md-sidebar {
+  padding: 0;
+}
