--- a/overrides/partials/integrations/analytics/plausible.html
+++ b/overrides/partials/integrations/analytics/plausible.html
@@ -1,1 +1,1 @@
-<script defer data-domain="docs.opensafely.org" src="https://plausible.io/js/script.js"></script>
+<script defer data-domain="docs.opensafely.org" src="https://plausible.io/js/script.tagged-events.js"></script>
